vlib/v/checker/tests/orm_fkey_has_pkey.vv
import db.sqlite

struct Person {
	id    int
	child []Child @[fkey: 'person_id']
}

struct Child {
	id        int @[primary; sql: serial]
	person_id int
}

fn main() {
	db := sqlite.connect(':memory:')!
	_ := sql db {
		select from Person
	}!
}
